[gd_scene load_steps=39 format=2]

[ext_resource path="res://assests/libraries/Ui/Place_box1.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Pokemon_scene_stage.gd" type="Script" id=2]
[ext_resource path="res://Ui/Pokemon_Box.tscn" type="PackedScene" id=3]
[ext_resource path="res://assests/libraries/Ui/tackle_box_foreground.png" type="Texture" id=4]
[ext_resource path="res://Ui/Bag_Box.tscn" type="PackedScene" id=5]
[ext_resource path="res://assests/libraries/battle_grounds/gras_ground.png" type="Texture" id=6]
[ext_resource path="res://Ui/Run_Box.tscn" type="PackedScene" id=7]
[ext_resource path="res://Ui/Battle_box.tscn" type="PackedScene" id=8]
[ext_resource path="res://Ui/back box.tscn" type="PackedScene" id=9]
[ext_resource path="res://Ui/battle_boxes/Attack_box_1.tscn" type="PackedScene" id=10]
[ext_resource path="res://Ui/battle_boxes/Attack_box_2.tscn" type="PackedScene" id=11]
[ext_resource path="res://Ui/battle_boxes/Attack_box_3.tscn" type="PackedScene" id=12]
[ext_resource path="res://Ui/battle_boxes/Attack_box_4.tscn" type="PackedScene" id=13]
[ext_resource path="res://Ui/Poke_box.tscn" type="PackedScene" id=14]
[ext_resource path="res://Pokemon/Venasaur.png" type="Texture" id=15]
[ext_resource path="res://Ui/Capture_box.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scenes/EventManager.gd" type="Script" id=17]
[ext_resource path="res://assests/libraries/health.png" type="Texture" id=18]
[ext_resource path="res://assests/libraries/Ui/Battle identifier.png" type="Texture" id=19]
[ext_resource path="res://assests/libraries/Ui/Battle identifier 0.png" type="Texture" id=20]
[ext_resource path="res://assests/libraries/Ui/Battle identifier glow.png" type="Texture" id=21]
[ext_resource path="res://Scenes/Battle_identifier.gd" type="Script" id=22]
[ext_resource path="res://Scenes/Scene_modulate.gd" type="Script" id=23]
[ext_resource path="res://assests/libraries/Ui/Do-you-want-t0-No.png" type="Texture" id=24]
[ext_resource path="res://assests/libraries/Ui/Do-you-want-t0.png" type="Texture" id=25]
[ext_resource path="res://assests/libraries/Ui/Do-you-want-to-yes.png" type="Texture" id=26]
[ext_resource path="res://Fonts/Pokemon_16.tres" type="DynamicFont" id=27]
[ext_resource path="res://Pokemon/Bulbasaur.png" type="Texture" id=28]
[ext_resource path="res://Scenes/Dialog_layer.gd" type="Script" id=29]
[ext_resource path="res://assests/npc_misc/Trainer1/BattleSprite.png" type="Texture" id=30]

[sub_resource type="Animation" id=6]
resource_name = "ComeIn"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 240, 6 ), Vector2( 162, 6 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "ComeOut"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 162, 6 ), Vector2( 240, 6 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 162, 5 ) ]
}

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;
uniform sampler2D emmision_texture;
uniform vec4 glow_colour: hint_color =  vec4(1.0);

void fragment(){
	vec4 current_color = texture(TEXTURE,UV);
	vec4 emmision_color = texture(emmision_texture,UV);
	
	if(emmision_color.r >0.0f){
		COLOR = emmision_color + glow_colour
	}
	
	else{
		COLOR = current_color
	}
}"

[sub_resource type="ShaderMaterial" id=1]
shader = SubResource( 2 )
shader_param/glow_colour = Color( 0.886275, 0.694118, 0.117647, 1 )
shader_param/emmision_texture = ExtResource( 21 )

[sub_resource type="Environment" id=3]
background_mode = 4
glow_enabled = true
glow_intensity = 8.0
glow_strength = 0.5
glow_blend_mode = 0
glow_hdr_scale = 4.0
glow_high_quality = true

[sub_resource type="Animation" id=5]
resource_name = "Day_night_cycle"
length = 24.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5, 12.1, 16, 19, 24 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.239216, 0.262745, 0.619608, 1 ), Color( 0.627451, 0.415686, 0.352941, 1 ), Color( 1, 1, 1, 1 ), Color( 0.772549, 0.611765, 0.423529, 1 ), Color( 0.309804, 0.321569, 0.576471, 1 ), Color( 0.239216, 0.262745, 0.619608, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5, 12.1, 16, 19, 24 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.596078 ), Color( 1, 1, 1, 0.419608 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.341176 ), Color( 1, 1, 1, 0.509804 ), Color( 1, 1, 1, 0.596078 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.596078 ) ]
}

[node name="Pokemon_scene" type="Control"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="EventManager" type="Node2D" parent="."]
script = ExtResource( 17 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.772549, 0.878431, 0.745098, 1 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 183, 47 )
texture = ExtResource( 28 )
region_enabled = true
region_rect = Rect2( 0, 34, 64, 64 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 63, 100 )
texture = ExtResource( 28 )
region_enabled = true
region_rect = Rect2( -1, 100, 64, 59 )

[node name="Control" type="Control" parent="."]
margin_top = 112.0
margin_right = 240.0
margin_bottom = 160.0

[node name="Back_box" type="Sprite" parent="Control"]
scale = Vector2( 1, 0.685714 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite" type="Sprite" parent="Control/Back_box"]
z_index = 1
texture = ExtResource( 4 )
centered = false

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 45, 16 )

[node name="Bag_Box" parent="Node2D" instance=ExtResource( 5 )]

[node name="Battle_box" parent="Node2D" instance=ExtResource( 8 )]

[node name="Capture_box" parent="Node2D" instance=ExtResource( 16 )]

[node name="Pokemon_Box" parent="Node2D" instance=ExtResource( 3 )]

[node name="Run_Box" parent="Node2D" instance=ExtResource( 7 )]

[node name="Opoosing_Trainers_Container" type="HBoxContainer" parent="."]
margin_left = 162.0
margin_top = 5.0
margin_right = 203.0
margin_bottom = 69.0

[node name="Trainer1" type="TextureRect" parent="Opoosing_Trainers_Container"]
margin_right = 41.0
margin_bottom = 64.0
size_flags_horizontal = 3
texture = ExtResource( 30 )

[node name="TrainerPlayer" type="AnimationPlayer" parent="Opoosing_Trainers_Container"]
unique_name_in_owner = true
anims/ComeIn = SubResource( 6 )
anims/ComeOut = SubResource( 8 )
anims/RESET = SubResource( 7 )

[node name="Battle_box" type="Node2D" parent="."]
position = Vector2( 45, 16 )

[node name="back box" parent="Battle_box" instance=ExtResource( 9 )]

[node name="Attack_box_1" parent="Battle_box" instance=ExtResource( 10 )]
position = Vector2( -29, 120 )

[node name="Attack_box_2" parent="Battle_box" instance=ExtResource( 11 )]
position = Vector2( 72, 120 )

[node name="Attack_box_3" parent="Battle_box" instance=ExtResource( 12 )]
position = Vector2( 173, 120 )

[node name="Attack_box_4" parent="Battle_box" instance=ExtResource( 13 )]
position = Vector2( 274, 120 )

[node name="Poke_box" parent="." instance=ExtResource( 14 )]
visible = false

[node name="Battle_identifier" type="Control" parent="."]
margin_right = 240.0
margin_bottom = 40.0
script = ExtResource( 22 )

[node name="Player_pokemon_0" type="Node2D" parent="Battle_identifier"]
scale = Vector2( 0.4, 0.4 )

[node name="Poke_Sprite" type="Sprite" parent="Battle_identifier/Player_pokemon_0"]
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 15 )
centered = false
region_enabled = true
region_rect = Rect2( 0.590935, 33.9263, 62.9813, 63.7719 )

[node name="HealthBar" type="TextureProgress" parent="Battle_identifier/Player_pokemon_0"]
modulate = Color( 0.435294, 0.752941, 0.172549, 1 )
margin_left = 55.5
margin_right = 115.5
margin_bottom = 4.0
rect_scale = Vector2( 3, 3 )
max_value = 67.0
value = 67.0
rounded = true
allow_greater = true
allow_lesser = true
texture_progress = ExtResource( 18 )

[node name="Exp_bar" type="TextureProgress" parent="Battle_identifier/Player_pokemon_0"]
modulate = Color( 0.0745098, 0.847059, 0.776471, 1 )
margin_left = 60.0
margin_top = 15.0
margin_right = 120.0
margin_bottom = 19.0
rect_scale = Vector2( 2.5, 2.7 )
min_value = 1.0
value = 100.0
exp_edit = true
texture_progress = ExtResource( 18 )

[node name="CONTAINER" type="Sprite" parent="Battle_identifier/Player_pokemon_0"]
scale = Vector2( 1.00712, 1 )
texture = ExtResource( 19 )
centered = false

[node name="RIM" type="Sprite" parent="Battle_identifier/Player_pokemon_0"]
material = SubResource( 1 )
texture = ExtResource( 20 )
centered = false

[node name="Enemy_pokemon_0" type="Node2D" parent="Battle_identifier"]
position = Vector2( 240, 0 )
scale = Vector2( -0.4, 0.4 )

[node name="Poke_Sprite" type="Sprite" parent="Battle_identifier/Enemy_pokemon_0"]
rotation = 3.14159
scale = Vector2( -0.7, -0.7 )
texture = ExtResource( 15 )
centered = false
region_enabled = true
region_rect = Rect2( 0.590935, 33.9263, 62.9813, 63.7719 )

[node name="HealthBar" type="TextureProgress" parent="Battle_identifier/Enemy_pokemon_0"]
modulate = Color( 0.435294, 0.752941, 0.172549, 1 )
margin_left = 57.5
margin_right = 117.5
margin_bottom = 4.0
rect_scale = Vector2( 3, 3 )
max_value = 67.0
value = 67.0
rounded = true
allow_greater = true
allow_lesser = true
texture_progress = ExtResource( 18 )

[node name="CONTAINER" type="Sprite" parent="Battle_identifier/Enemy_pokemon_0"]
texture = ExtResource( 19 )
centered = false

[node name="RIM" type="Sprite" parent="Battle_identifier/Enemy_pokemon_0"]
material = SubResource( 1 )
texture = ExtResource( 20 )
centered = false

[node name="Tween" type="Tween" parent="Battle_identifier"]
playback_process_mode = 0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="Do_you_want_to" type="Node2D" parent="."]
visible = false
z_index = 1

[node name="Back-ground" type="TextureRect" parent="Do_you_want_to"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 25 )

[node name="Label" type="Label" parent="Do_you_want_to/Back-ground"]
margin_left = 32.0
margin_top = 89.0
margin_right = 210.0
margin_bottom = 103.0
custom_fonts/font = ExtResource( 27 )
text = "Do you want to switch Pokemons"

[node name="Option_container" type="Node2D" parent="Do_you_want_to"]

[node name="VBoxContainer" type="VBoxContainer" parent="Do_you_want_to/Option_container"]
margin_left = 5.0
margin_top = 108.0
margin_right = 235.0
margin_bottom = 155.0
custom_constants/separation = 0

[node name="Yes" type="TextureRect" parent="Do_you_want_to/Option_container/VBoxContainer"]
margin_right = 230.0
margin_bottom = 23.0
size_flags_vertical = 3

[node name="Sprite" type="Sprite" parent="Do_you_want_to/Option_container/VBoxContainer/Yes"]
position = Vector2( 1, 1 )
texture = ExtResource( 26 )
centered = false
vframes = 2
frame = 1

[node name="No" type="TextureRect" parent="Do_you_want_to/Option_container/VBoxContainer"]
margin_top = 23.0
margin_right = 230.0
margin_bottom = 47.0
size_flags_vertical = 3

[node name="Sprite" type="Sprite" parent="Do_you_want_to/Option_container/VBoxContainer/No"]
position = Vector2( 1, 1 )
texture = ExtResource( 24 )
centered = false
vframes = 2
frame = 1

[node name="Bag_layer" type="Node2D" parent="."]
z_index = 20

[node name="Dialog_layer" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource( 29 )

[node name="Scene_modulate" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.596078 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 240.0
margin_bottom = 112.0
script = ExtResource( 23 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Scene_modulate"]
anims/Day_night_cycle = SubResource( 5 )
anims/RESET = SubResource( 4 )

[connection signal="tween_completed" from="Battle_identifier/Tween" to="Battle_identifier" method="_on_Tween_tween_completed"]
